Updating index html

--- a/Blessing_site/index.html
+++ b/Blessing_site/index.html
@@ -101,14 +101,47 @@
         <div class="card-deck">
 
           <div class="card">
-            <img src="./images/homenify_cover.png" class="card-img-top" alt="homenify" />
+            <img src="./images/elearncpr-cover.png" class="card-img-top" alt="E-LearnCPR"/>
             <div class="card-body">
-              <h5 class="card-title">Homenify</h5>
+              <h5 class="card-title">E-LearnCPR Case Study</h5>
               <p class="card-text">
-                Homenify is a real estate website designed for a luxury brand that specializes only in high-end homes in the Halifax Regional Municipality (HRM). The company’s understanding of websites is very basic, but they want the website to be interactive and informative for their clients. They also want their website to look different than their competitors but at the same time, keep up with industry standards. Homenify was designed using Figma. 
+                This UX case study showcases the steps involved in designing the E-LearnCPR, which is a cross-platform utility to help people learn how to give CPR. In this case study, I focused on the user flow from when the user signs into the e-learning platform until the user completes the lesson. I first empathized with the users by first conducting research via surveys and interviews. The findings and insights aid the design of this platform so that users can easily join and complete their courses.  
               </p>
               <p class="card-text">
-                <a href="https://www.behance.net/gallery/128221949/Homenify-Luxury-Real-Estate" target="_blank"
+                <a href="https://www.behance.net/gallery/137912321/E-LearnCPR-Mobile-and-Website-Design-Case-Study" target="_blank">
+                  <button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="./images/findi.png" class="card-img-top" alt="FindI" />
+            <div class="card-body">
+              <h5 class="card-title">FindI</h5>
+              <p class="card-text">
+                FindI is a business repository website designed to allow small businesses to register their business details for easy discoverability by customers. On FindI, small business owners can list their businesses while users can search, find and reach out to them. The website is useful, user-friendly, showcases a variety of small businesses and offers a smooth browsing experience for users. This project was designed using Figma.
+              </p>
+              <p class="card-text">
+                <a href="https://www.behance.net/gallery/135135745/FINDI-WEBSITE-DESIGN-A-UX-CASE-STUDY" target="_blank">
+                  <button type="button" class="btn btn-secondary btn-lg">
+                    Learn more
+                  </button></a>
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="./images/Goodwill-bakery.png" class="card-img-top" alt="Goodwill Bakery App Case Study" />
+            <div class="card-body">
+              <h4 class="card-title"> Goodwill Bakery App Case Study </h4>
+              <p class="card-text">
+                This UX case study showcases the processes involved in designing the Goodwill Bakery food delivery mobile application.
+                The Goodwill Bakery App is a mobile application designed to allow customers to order baked goods online with the option of having their orders customized and delivered as well. This mobile application is easy to use, offers a smooth online shopping experience for users and showcases a variety of different baked goods.
+              </p>
+              <p class="card-text">
+                <a href="https://www.behance.net/gallery/134795383/Goodwill-Bakery-Mobile-App" target="_blank"
                   ><button type="button" class="btn btn-secondary btn-lg">
                     Learn more
                   </button></a
@@ -116,42 +149,12 @@
               </p>
             </div>
           </div>
-
-          <div class="card">
-            <img src="./images/aleph_cover.png" class="card-img-top" alt="aleph" />
-            <div class="card-body">
-              <h5 class="card-title">Aleph</h5>
-              <p class="card-text">
-                Aleph is a software development company that specializes on designing, developing and delivering software products. Aleph builds custom, state-of-the-art and scalable platforms that empower businesses to solve real world problems. We pride ourselves in creating new things while making existing things perform better. This project was designed using Figma.
-              </p>
-              <p class="card-text">
-                <a href="https://www.behance.net/gallery/126780863/Alep-Website-Design" target="_blank">
-                  <button type="button" class="btn btn-secondary btn-lg">
-                    Learn more
-                  </button></a>
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <img src="./images/cointract_cover.png" class="card-img-top" alt="tenrify" />
-            <div class="card-body">
-              <h5 class="card-title">Cointract</h5>
-              <p class="card-text">
-                CoinTract is a secure cryptocurrency mobile app that allows users to buy, sell and store cryptocurrency coins. This project was designed using Miro, Figma.
-              </p>
-              <p class="card-text">
-                <a href="https://www.behance.net/gallery/128717559/CoinTract-Cryptocurrency-Mobile-App" target="_blank">
-                  <button type="button" class="btn btn-secondary btn-lg">
-                    Learn more
-                  </button></a>
-              </p>
-            </div>
-          </div>
         </div>
+
         <div id="#projectbuttons" class="container">
           <a href="https://www.behance.net/blessingokpala" target="_blank">
             <button type="button" class="btn btn-dark btn-lg" style="background-color: #0057FF;">
-              Behance Projects
+            More UX Projects
             </button></a>
             <a href="https://dribbble.com/blessingc" target="_blank">
               <button type="button" class="btn btn-dark btn-lg" style="background-color: #EA4C89;">
@@ -159,12 +162,12 @@
               </button></a>
         </div>
       </div>
-      
+      <hr>
       <div class="container">
-        <a href="#projects"><h2>FRONT-END DEVELOPMENT PROJECTS</h2><a></a>
+        <a href="#projects"><h2>FRONT-END DEVELOPMENT PROJECTS</h2></a>
         <div class="card-deck">
           <div class="card">
-            <img src="./images/arise_cover.png" alt="Arise">
+            <img src="./images/arise_cover.png" style="width: 100%;" alt="Arise">
             <div class="card-body">
               <h5 class="card-title">Arise</h5>
               <p class="card-text">
@@ -174,8 +177,7 @@
                 <a href="https://ariseproject.netlify.app/" target="_blank"
                   ><button type="button" class="btn btn-secondary btn-lg">
                     Learn more
-                  </button></a
-                >
+                  </button></a>
               </p>
             </div>
           </div>
